# luci-connect

./: .gitignore  .gitlab-ci.yml  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  install_manifest_headers.txt  install_manifest_libraries.txt  luci-connect.sln  luciconnect.vcxproj  luciconnect.vcxproj.filters
cmake/modules/: FindAsio.cmake
doc/: .gitignore  Doxyfile
include/: client.h  connection.h  service.h
include/core/: connection.h  message.h
include/lc2pp/: client.h  node.h  service.h
include/lc2pp/core/: connection.h  message.h
include/luciconnect/: asio.h  connection.h  geojson.h  geometry.h  luciconnect.h  message.h  node.h  quaview-service.h  service.h  triangulation.h
include/luciconnect/core/: connection.h  message.h
include/luciconnect/easylogging/: easylogging++.h
include/luciconnect/md5/: md5.h
include/lucipp/: node.h  service.h
include/lucipp/core/: connection.h  message.h
include/md5/: md5.h
luciconnect.dir/Debug/luciconnect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.write.1.tlog
samples/: .gitignore  CMakeLists.txt
samples/src/: simple-client.cc  simple-service.cc
src/: connection.cc  message.cc  node.cc  quaview-service.cc
src/core/: connection.cc  message.cc
src/md5/: md5.cc
test/include/: connectiontest.h  messagetest.h
test/include/core/: connection_tests.h  message_tests.h
test/include/lc2pp/: node_tests.h
test/include/lc2pp/core/: connection_tests.h  message_tests.h
test/include/luciconnect/: connection_tests.h  node_tests.h
test/include/luciconnect/core/: connection_tests.h  message_tests.h
test/include/lucipp/: node_tests.h
test/include/lucipp/core/: connection_tests.h  message_tests.h
test/src/: connectiontest.cc  main.cc  messagetest.cc  node_abstract_test.cc
test/src/core/: connection_establish_tests.cc  connection_receive_tests.cc  connection_send_test.cc  message_attachment_tests.cc  message_tests.cc
test/src/lc2pp/: node_abstract_test.cc  node_test.cc
test/src/lc2pp/core/: connection_establish_tests.cc  connection_send_test.cc  message_attachment_tests.cc  message_tests.cc
test/src/luciconnect/: connection_establish_tests.cc  connection_send_tests.cc  message_attachment_tests.cc  message_tests.cc  node_test.cc
test/src/luciconnect/core/: connection_establish_tests.cc  connection_send_test.cc  message_attachment_tests.cc  message_tests.cc
test/src/lucipp/: node_test.cc
test/src/lucipp/core/: connection_establish_tests.cc  connection_send_test.cc  message_attachment_tests.cc  message_tests.cc
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
x64/Debug/PACKAGE/PACKAGE.tlog/: PACKAGE.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
